Fixed the reset button alignment issue
Let me know incase if you need further improvement :)

--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,12 @@ nav a:hover {
   border-radius: 5px;
 }
 .reload-icon {
-  position: absolute;
-  visibility: hidden;
-  top: 194px;
-  left: 589px;
+  margin-left: -42px;
+  margin-bottom: 5px;
+}
+
+.Reload {
+  display: flex;
+  gap: 7px;
+  align-items: center;
 }
